--- a/src/styles.css
+++ b/src/styles.css
@@ -32,7 +32,7 @@ body {
   }
   .wiki-content {
     display: flex;
-    /*flex-flow: row-reverse;*/
+    flex-direction: row-reverse;
   }
   .wiki-text {
     max-width: 50%;
