--- a/src/styles.css
+++ b/src/styles.css
@@ -36,9 +36,11 @@ body {
   }
   .wiki-text {
     max-width: 50%;
+    min-width: 50%;
   }
   .wiki-img {
     max-width: 50%;
+    min-width: 50%;
   }
   .container {
     max-width: 960px;
