--- a/src/styles.css
+++ b/src/styles.css
@@ -38,7 +38,7 @@ body {
     max-width: 50%;
     min-width: 50%;
   }
-  .wiki-img {
+  .img-container {
     max-width: 50%;
     min-width: 50%;
   }
